[package]
name = "nu_plugin_base"
version = "0.1.0"
edition = "2021"
authors = ["Horasal"]
description = "A nushell plugin for converting base-n to binary"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/horasal/nu_plugin_base"
keywords = ["nushell"]
categories = ["command-line-utilities"]

[dependencies]
nu-plugin = "0.84.0"
nu-protocol = "0.84.0"
num-bigint = "0.4.4"
num-traits = "0.2.16"
